# grapher

./: .gitignore  .grapher.save  CMakeLists.txt  Pipfile  README.md  channels.json  grapher.json  grapher.save  test-1.sh  test-mqtt.sh  test-tcp.sh  tmp.grapher.json  tmp.json
grapher/: Plotter.py  __init__.py  main.py
grapher/app/: __init__.py  __main__.py  main.py
grapher/config/: __init__.py  config.py  configlib.py
grapher/sinks/: DataProvider.py  __init__.py  mqtt.py  tcp.py
grapher/util/: __init__.py  grapher_logging.py
lib/: CMakeLists.txt  defaults.json
lib/public/: data_channel.h  data_handler.h  data_provider.h  file_handler.h  globals.h  graph_data_csv_handler.h  workspace_handler.h
lib/public/controllers/: data_controller.h  main_controller.h  menu_controller.h  workspace_controller.h
lib/public/models/: abstract_data_provider_model.h  data_model.h  data_providers_model.h  menu_model.h  workspace_model.h
lib/public/providers/: test_provider.h
lib/public/util/: json_util.h
lib/src/: data_channel.cpp  data_handler.cpp  data_provider.cpp  file_handler.cpp  graph_data_csv_handler.cpp  tmp.cpp  workspace_handler.cpp
lib/src/controllers/: data_controller.cpp  main_controller.cpp  menu_controller.cpp  workspace_controller.cpp
lib/src/models/: abstract_data_provider_model.cpp  data_model.cpp  data_providers_model.cpp  menu_model.cpp  workspace_model.cpp
lib/src/providers/: test_provider.cpp
lib/tests/: CMakeLists.txt
lib/tests/resources/: test-workspace-2.json  test.json  workspace-test-1.json  workspace-test.json
lib/tests/src/: main.cpp
qcustomplot/: CMakeLists.txt
qcustomplot/examples/axis-tags/: axistag.h  mainwindow.h
qcustomplot/examples/interactions/: mainwindow.h
qcustomplot/examples/plots/: mainwindow.h
qcustomplot/examples/scrollbar-axis-range-control/: mainwindow.h
qcustomplot/examples/text-document-integration/: qcpdocumentobject.h
test/: mqtt_test.py  socket_test.py
ui-widgets/: CMakeLists.txt
ui-widgets/src/: color_list_editor.cpp  color_list_editor.h  config_table_view.cpp  config_table_view.h  main.cpp  main_window.cpp  main_window.h  mainwindow.ui  plot_handler.cpp  plot_handler.h
